fix: initial solution for the exercise 26 with a bugfix in pop method (stack)

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2989,15 +2989,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "5d010964",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Starting to measure the stack datastructure for both List and LinkedList\n",
+      "After PUSH:\n",
+      "   stack_linked_list = [7918, 9049, 1470, 4136, 9665]\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'setNextData'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 194\u001b[0m\n\u001b[1;32m    190\u001b[0m     measure_stack_push_pop_python_list(sample_nums)\n\u001b[1;32m    192\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnd of the stack datastructure\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 194\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[5], line 185\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    183\u001b[0m sample_nums \u001b[38;5;241m=\u001b[39m generate_numbers(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m    184\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStarting to measure the stack datastructure for both List and LinkedList\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 185\u001b[0m \u001b[43mmeasure_stack_push_pop_linked_list\u001b[49m\u001b[43m(\u001b[49m\u001b[43msample_nums\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    187\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m    188\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprogram will continue after 5 seconds\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[5], line 12\u001b[0m, in \u001b[0;36mtime_it.<locals>.wrapper\u001b[0;34m(*args, **kargs)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapper\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkargs):\n\u001b[1;32m     11\u001b[0m     start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter_ns()\n\u001b[0;32m---> 12\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m     end_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter_ns()\n\u001b[1;32m     14\u001b[0m     elapsed_time \u001b[38;5;241m=\u001b[39m end_time \u001b[38;5;241m-\u001b[39m start_time\n",
+      "Cell \u001b[0;32mIn[5], line 170\u001b[0m, in \u001b[0;36mmeasure_stack_push_pop_linked_list\u001b[0;34m(lst)\u001b[0m\n\u001b[1;32m    168\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAfter PUSH:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m   stack_linked_list = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstack_linked_list\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \n\u001b[1;32m    169\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m stack_linked_list\u001b[38;5;241m.\u001b[39misEmpty():\n\u001b[0;32m--> 170\u001b[0m     \u001b[43mstack_linked_list\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    171\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAfter POP:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m   stack_linked_list = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstack_linked_list\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[5], line 49\u001b[0m, in \u001b[0;36mStackLinkedList.pop\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     47\u001b[0m     current \u001b[38;5;241m=\u001b[39m current\u001b[38;5;241m.\u001b[39mgetNextData()\n\u001b[1;32m     48\u001b[0m result \u001b[38;5;241m=\u001b[39m current\u001b[38;5;241m.\u001b[39mgetData()\n\u001b[0;32m---> 49\u001b[0m \u001b[43mprevious\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msetNextData\u001b[49m(current\u001b[38;5;241m.\u001b[39mgetNextData())\n\u001b[1;32m     50\u001b[0m current \u001b[38;5;241m=\u001b[39m previous\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mqueue \u001b[38;5;241m=\u001b[39m previous\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'setNextData'"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "26. Design and implement an experiment that will compare the performance of Python list \n",
     "    based stack and queue with the linked list implementation\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "import random\n",
+    "import time\n",
+    "from pythonds.basic import Stack2, Queue2, Node\n",
+    "def time_it(func):\n",
+    "    def wrapper(*args, **kargs):\n",
+    "        start_time = time.perf_counter_ns()\n",
+    "        result = func(*args, **kargs)\n",
+    "        end_time = time.perf_counter_ns()\n",
+    "        elapsed_time = end_time - start_time\n",
+    "        print(f\"==> Function '{func.__name__}' took {elapsed_time} nanoseconds to execute.\")\n",
+    "        return result\n",
+    "    return wrapper\n",
+    "\n",
+    "\n",
+    "class StackLinkedList:\n",
+    "    def __init__(self):\n",
+    "       self.head = None\n",
+    "       self.queue = None\n",
+    "       self.number_of_elts = 0\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        current = self.head\n",
+    "        temp = Node(item)\n",
+    "        if current != None:\n",
+    "            while current.getNextData() != None:\n",
+    "                current = current.getNextData()\n",
+    "            temp.setNextData(current.getNextData())\n",
+    "            current.setNextData(temp)\n",
+    "            self.queue = current.getNextData()\n",
+    "        else:\n",
+    "            temp.setNextData(self.head)\n",
+    "            current = temp\n",
+    "            self.head = current \n",
+    "            self.queue = current\n",
+    "    \n",
+    "    def pop(self):\n",
+    "        current = self.head\n",
+    "        previous = None\n",
+    "        if current != None:\n",
+    "            while current.getNextData() != None:\n",
+    "                previous = current\n",
+    "                current = current.getNextData()\n",
+    "            result = current.getData()\n",
+    "            previous.setNextData(current.getNextData())\n",
+    "            current = previous\n",
+    "            self.queue = previous\n",
+    "            return result\n",
+    "        return None\n",
+    "            \n",
+    "    \n",
+    "    def isEmpty(self):\n",
+    "        return self.head == None \n",
+    "    \n",
+    "    def size(self):\n",
+    "        current = self.head\n",
+    "        count = 0\n",
+    "        while current != None:\n",
+    "            count += 1\n",
+    "            current = current.getNextData()\n",
+    "        return count\n",
+    "\n",
+    "    def peek(self):\n",
+    "        item = self.queue.getData()\n",
+    "        return item\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        items = \"[\"\n",
+    "        separator = \", \"\n",
+    "        current = self.head\n",
+    "        while None != current:\n",
+    "            item = current.getData()\n",
+    "            items += f\"{item}\"\n",
+    "            if None != current.getNextData():\n",
+    "                items += \", \" \n",
+    "            current = current.getNextData()\n",
+    "        items += \"]\"\n",
+    "        return items\n",
+    "\n",
+    "class QueueLinkedList:\n",
+    "    def __init__(self):\n",
+    "       self.head = None\n",
+    "       self.queue = None\n",
+    "       self.number_of_elts = 0\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        current = self.head\n",
+    "        temp = Node(item)\n",
+    "        temp.setNextData(self.head)\n",
+    "        current = temp\n",
+    "        self.head = current \n",
+    "    \n",
+    "    def pop(self):\n",
+    "        current = self.head\n",
+    "        previous = None\n",
+    "        if current != None:\n",
+    "            while current.getNextData() != None:\n",
+    "                previous = current\n",
+    "                current = current.getNextData()\n",
+    "            result = current.getData()\n",
+    "            previous.setNextData(current.getNextData())\n",
+    "            current = previous\n",
+    "            self.queue = previous\n",
+    "            return result\n",
+    "        return None\n",
+    "    \n",
+    "    def isEmpty(self):\n",
+    "        return self.head == None \n",
+    "    \n",
+    "    def size(self):\n",
+    "        current = self.head\n",
+    "        count = 0\n",
+    "        while current != None:\n",
+    "            count += 1\n",
+    "            current = current.getNextData()\n",
+    "        return count\n",
+    "\n",
+    "    def peek(self):\n",
+    "        item = self.queue.getData()\n",
+    "        return item\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        items = \"[\"\n",
+    "        separator = \", \"\n",
+    "        current = self.head\n",
+    "        while None != current:\n",
+    "            item = current.getData()\n",
+    "            items += f\"{item}\"\n",
+    "            if None != current.getNextData():\n",
+    "                items += \", \" \n",
+    "            current = current.getNextData()\n",
+    "        items += \"]\"\n",
+    "        return items\n",
+    "def generate_numbers(n: int) -> list:\n",
+    "    return [ random.randint(1, 10000) for i in range(n)]\n",
+    "\n",
+    "# function to time stack/queue implemented using python list for push/pop method\n",
+    "@time_it\n",
+    "def measure_stack_push_pop_python_list(lst: list):\n",
+    "    stack_python_list = Stack2()\n",
+    "    for i in lst:\n",
+    "        stack_python_list.push(i)\n",
+    "    print(f\"After PUSH:\\n   stack_python_list = {stack_python_list}\") \n",
+    "    while not stack_python_list.isEmpty():\n",
+    "        stack_python_list.pop()\n",
+    "    print(f\"after POP:\\n   stack_python_list = {stack_python_list}\")\n",
+    "\n",
+    "@time_it\n",
+    "def measure_queue_push_pop_python_list(lst: list):\n",
+    "    queue_python_list = Queue2()\n",
+    "    for i in lst:\n",
+    "        queue_python_list.push(i)\n",
+    "    print(f\"After PUSH:\\n   queue_python_list = {queue_python_list}\") \n",
+    "    while not queue_python_list.isEmpty():\n",
+    "        queue_python_list.pop()\n",
+    "    print(f\"After POP:\\n   queue_python_list = {queue_python_list}\")\n",
+    "    \n",
+    "# function to time stack/queue implemented using linked list for push/pop method\n",
+    "@time_it\n",
+    "def measure_stack_push_pop_linked_list(lst: list):\n",
+    "    stack_linked_list = StackLinkedList()\n",
+    "    for i in lst:\n",
+    "        stack_linked_list.push(i)\n",
+    "    print(f\"After PUSH:\\n   stack_linked_list = {stack_linked_list}\") \n",
+    "    while not stack_linked_list.isEmpty():\n",
+    "        stack_linked_list.pop()\n",
+    "    print(f\"After POP:\\n   stack_linked_list = {stack_linked_list}\")\n",
+    "@time_it\n",
+    "def measure_queue_push_pop_linked_list(lst: list):\n",
+    "    queue_linked_list = QueueLinkedList()\n",
+    "    for i in lst:\n",
+    "        queue_linked_list.push(i)\n",
+    "    print(f\"After POP:\\n   queue_linked_list = {queue_linked_list}\")\n",
+    "    while not queue_linked_list.isEmpty():\n",
+    "        queue_linked_list.pop()\n",
+    "    print(f\"After POP:\\n   queue_linked_list = {queue_linked_list}\")\n",
+    "\n",
+    "def main():\n",
+    "    sample_nums = generate_numbers(5)\n",
+    "    print(\"Starting to measure the stack datastructure for both List and LinkedList\")\n",
+    "    measure_stack_push_pop_linked_list(sample_nums)\n",
+    "\n",
+    "    time.sleep(5)\n",
+    "    print(\"program will continue after 5 seconds\")\n",
+    "\n",
+    "    measure_stack_push_pop_python_list(sample_nums)\n",
+    "    \n",
+    "    print(\"End of the stack datastructure\", end=\"\\n\\n\")\n",
+    "\n",
+    "main()"
    ]
   },
   {
