--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2989,7 +2989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5d010964",
    "metadata": {},
    "outputs": [
@@ -2999,22 +2999,30 @@
      "text": [
       "Starting to measure the stack datastructure for both List and LinkedList\n",
       "After PUSH:\n",
-      "   stack_linked_list = [7918, 9049, 1470, 4136, 9665]\n"
+      "   stack_linked_list = [29, 4441, 5314, 6286, 3060]\n",
+      "3060\n",
+      "6286\n",
+      "5314\n",
+      "4441\n",
+      "29\n",
+      "After POP:\n",
+      "   stack_linked_list = []\n",
+      "==> Function 'measure_stack_push_pop_linked_list' took 108477 nanoseconds to execute.\n",
+      "program will continue after 5 seconds\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'setNextData'",
+     "ename": "TypeError",
+     "evalue": "Stack2.__init__() missing 1 required positional argument: 'name'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 194\u001b[0m\n\u001b[1;32m    190\u001b[0m     measure_stack_push_pop_python_list(sample_nums)\n\u001b[1;32m    192\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnd of the stack datastructure\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 194\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[5], line 185\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    183\u001b[0m sample_nums \u001b[38;5;241m=\u001b[39m generate_numbers(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m    184\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mStarting to measure the stack datastructure for both List and LinkedList\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 185\u001b[0m \u001b[43mmeasure_stack_push_pop_linked_list\u001b[49m\u001b[43m(\u001b[49m\u001b[43msample_nums\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    187\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m    188\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprogram will continue after 5 seconds\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[5], line 12\u001b[0m, in \u001b[0;36mtime_it.<locals>.wrapper\u001b[0;34m(*args, **kargs)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapper\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkargs):\n\u001b[1;32m     11\u001b[0m     start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter_ns()\n\u001b[0;32m---> 12\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m     end_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter_ns()\n\u001b[1;32m     14\u001b[0m     elapsed_time \u001b[38;5;241m=\u001b[39m end_time \u001b[38;5;241m-\u001b[39m start_time\n",
-      "Cell \u001b[0;32mIn[5], line 170\u001b[0m, in \u001b[0;36mmeasure_stack_push_pop_linked_list\u001b[0;34m(lst)\u001b[0m\n\u001b[1;32m    168\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAfter PUSH:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m   stack_linked_list = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstack_linked_list\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m) \n\u001b[1;32m    169\u001b[0m \u001b[38;5;28;01mwhile\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m stack_linked_list\u001b[38;5;241m.\u001b[39misEmpty():\n\u001b[0;32m--> 170\u001b[0m     \u001b[43mstack_linked_list\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mpop\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    171\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAfter POP:\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m   stack_linked_list = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mstack_linked_list\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[5], line 49\u001b[0m, in \u001b[0;36mStackLinkedList.pop\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m     47\u001b[0m     current \u001b[38;5;241m=\u001b[39m current\u001b[38;5;241m.\u001b[39mgetNextData()\n\u001b[1;32m     48\u001b[0m result \u001b[38;5;241m=\u001b[39m current\u001b[38;5;241m.\u001b[39mgetData()\n\u001b[0;32m---> 49\u001b[0m \u001b[43mprevious\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msetNextData\u001b[49m(current\u001b[38;5;241m.\u001b[39mgetNextData())\n\u001b[1;32m     50\u001b[0m current \u001b[38;5;241m=\u001b[39m previous\n\u001b[1;32m     51\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mqueue \u001b[38;5;241m=\u001b[39m previous\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'setNextData'"
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[15], line 198\u001b[0m\n\u001b[1;32m    194\u001b[0m     measure_stack_push_pop_python_list(sample_nums)\n\u001b[1;32m    196\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnd of the stack datastructure\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 198\u001b[0m \u001b[43mmain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[15], line 194\u001b[0m, in \u001b[0;36mmain\u001b[0;34m()\u001b[0m\n\u001b[1;32m    191\u001b[0m time\u001b[38;5;241m.\u001b[39msleep(\u001b[38;5;241m5\u001b[39m)\n\u001b[1;32m    192\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mprogram will continue after 5 seconds\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m--> 194\u001b[0m \u001b[43mmeasure_stack_push_pop_python_list\u001b[49m\u001b[43m(\u001b[49m\u001b[43msample_nums\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    196\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEnd of the stack datastructure\u001b[39m\u001b[38;5;124m\"\u001b[39m, end\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[15], line 12\u001b[0m, in \u001b[0;36mtime_it.<locals>.wrapper\u001b[0;34m(*args, **kargs)\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mwrapper\u001b[39m(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkargs):\n\u001b[1;32m     11\u001b[0m     start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter_ns()\n\u001b[0;32m---> 12\u001b[0m     result \u001b[38;5;241m=\u001b[39m \u001b[43mfunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mkargs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     13\u001b[0m     end_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mperf_counter_ns()\n\u001b[1;32m     14\u001b[0m     elapsed_time \u001b[38;5;241m=\u001b[39m end_time \u001b[38;5;241m-\u001b[39m start_time\n",
+      "Cell \u001b[0;32mIn[15], line 148\u001b[0m, in \u001b[0;36mmeasure_stack_push_pop_python_list\u001b[0;34m(lst)\u001b[0m\n\u001b[1;32m    146\u001b[0m \u001b[38;5;129m@time_it\u001b[39m\n\u001b[1;32m    147\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mmeasure_stack_push_pop_python_list\u001b[39m(lst: \u001b[38;5;28mlist\u001b[39m):\n\u001b[0;32m--> 148\u001b[0m     stack_python_list \u001b[38;5;241m=\u001b[39m \u001b[43mStack2\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m    149\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m lst:\n\u001b[1;32m    150\u001b[0m         stack_python_list\u001b[38;5;241m.\u001b[39mpush(i)\n",
+      "\u001b[0;31mTypeError\u001b[0m: Stack2.__init__() missing 1 required positional argument: 'name'"
      ]
     }
    ],
@@ -3067,6 +3075,9 @@
     "                previous = current\n",
     "                current = current.getNextData()\n",
     "            result = current.getData()\n",
+    "            if previous == None:\n",
+    "                self.head = previous\n",
+    "                return None\n",
     "            previous.setNextData(current.getNextData())\n",
     "            current = previous\n",
     "            self.queue = previous\n",
