chore: output for the measurement for the stack/queue linked list and python list

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -2990,6 +2990,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "execution_count": 2,
    "id": "5d010964",
    "metadata": {},
    "outputs": [
@@ -2998,18 +2999,16 @@
      "output_type": "stream",
      "text": [
       "Starting to measure the stack datastructure for both List and LinkedList\n",
-      "After PUSH:\n",
-      "   stack_linked_list = [950, 4649, 2590, 130, 8974]\n",
-      "After POP:\n",
-      "   stack_linked_list = []\n",
-      "==> Function 'measure_stack_push_pop_linked_list' took 148892 nanoseconds to execute.\n",
+      "==> Function 'measure_stack_push_pop_linked_list' took 186159 nanoseconds to execute.\n",
       "program will continue after 5 seconds\n",
-      "After PUSH:\n",
-      "   stack_python_list = [950, 4649, 2590, 130, 8974]\n",
-      "after POP:\n",
-      "   stack_python_list = []\n",
-      "==> Function 'measure_stack_push_pop_python_list' took 146214 nanoseconds to execute.\n",
+      "==> Function 'measure_stack_push_pop_python_list' took 22499 nanoseconds to execute.\n",
       "End of the stack datastructure\n",
+      "\n",
+      "Starting to measure the queue datastructure for both List and LinkedList\n",
+      "==> Function 'measure_queue_enqueue_dequeue_linked_list' took 74971 nanoseconds to execute.\n",
+      "program will continue after 5 seconds\n",
+      "==> Function 'measure_queue_enqueue_dequeue_python_list' took 54467 nanoseconds to execute.\n",
+      "End of the queue datastructure\n",
       "\n"
      ]
     }
