refactor: rename the queue class method enqueue and dequeue

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3106,14 +3106,14 @@
     "       self.queue = None\n",
     "       self.number_of_elts = 0\n",
     "\n",
-    "    def push(self, item):\n",
+    "    def enqueue(self, item):\n",
     "        current = self.head\n",
     "        temp = Node(item)\n",
     "        temp.setNextData(self.head)\n",
     "        current = temp\n",
     "        self.head = current \n",
     "    \n",
-    "    def pop(self):\n",
+    "    def dequeue(self):\n",
     "        current = self.head\n",
     "        previous = None\n",
     "        if current != None:\n",
