fix: add a reference for the head for an empty queue

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3121,6 +3121,9 @@
     "                previous = current\n",
     "                current = current.getNextData()\n",
     "            result = current.getData()\n",
+    "            if previous == None:\n",
+    "                self.head = previous\n",
+    "                return None\n",
     "            previous.setNextData(current.getNextData())\n",
     "            current = previous\n",
     "            self.queue = previous\n",
