refactor: remove debugging print statement and rename measure function for the queue measurement

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3166,20 +3166,20 @@
     "    stack_python_list = Stack()\n",
     "    for i in lst:\n",
     "        stack_python_list.push(i)\n",
-    "    print(f\"After PUSH:\\n   stack_python_list = {stack_python_list}\") \n",
+    "    # print(f\"After PUSH:\\n   stack_python_list = {stack_python_list}\") \n",
     "    while not stack_python_list.isEmpty():\n",
     "        stack_python_list.pop()\n",
-    "    print(f\"after POP:\\n   stack_python_list = {stack_python_list}\")\n",
+    "    # print(f\"after POP:\\n   stack_python_list = {stack_python_list}\")\n",
     "\n",
     "@time_it\n",
-    "def measure_queue_push_pop_python_list(lst: list):\n",
+    "def measure_queue_enqueue_dequeue_python_list(lst: list):\n",
     "    queue_python_list = Queue2()\n",
     "    for i in lst:\n",
-    "        queue_python_list.push(i)\n",
-    "    print(f\"After PUSH:\\n   queue_python_list = {queue_python_list}\") \n",
+    "        queue_python_list.enqueue(i)\n",
+    "    # print(f\"After PUSH:\\n   queue_python_list = {queue_python_list}\") \n",
     "    while not queue_python_list.isEmpty():\n",
-    "        queue_python_list.pop()\n",
-    "    print(f\"After POP:\\n   queue_python_list = {queue_python_list}\")\n",
+    "        queue_python_list.dequeue()\n",
+    "    # print(f\"After POP:\\n   queue_python_list = {queue_python_list}\")\n",
     "    \n",
     "# function to time stack/queue implemented using linked list for push/pop method\n",
     "@time_it\n",
@@ -3187,19 +3187,19 @@
     "    stack_linked_list = StackLinkedList()\n",
     "    for i in lst:\n",
     "        stack_linked_list.push(i)\n",
-    "    print(f\"After PUSH:\\n   stack_linked_list = {stack_linked_list}\") \n",
+    "    # print(f\"After PUSH:\\n   stack_linked_list = {stack_linked_list}\") \n",
     "    while not stack_linked_list.isEmpty():\n",
     "        stack_linked_list.pop()\n",
-    "    print(f\"After POP:\\n   stack_linked_list = {stack_linked_list}\")\n",
+    "    # print(f\"After POP:\\n   stack_linked_list = {stack_linked_list}\")\n",
     "@time_it\n",
-    "def measure_queue_push_pop_linked_list(lst: list):\n",
+    "def measure_queue_enqueue_dequeue_linked_list(lst: list):\n",
     "    queue_linked_list = QueueLinkedList()\n",
     "    for i in lst:\n",
-    "        queue_linked_list.push(i)\n",
-    "    print(f\"After POP:\\n   queue_linked_list = {queue_linked_list}\")\n",
+    "        queue_linked_list.enqueue(i)\n",
+    "    # print(f\"After POP:\\n   queue_linked_list = {queue_linked_list}\")\n",
     "    while not queue_linked_list.isEmpty():\n",
-    "        queue_linked_list.pop()\n",
-    "    print(f\"After POP:\\n   queue_linked_list = {queue_linked_list}\")\n",
+    "        queue_linked_list.dequeue()\n",
+    "    # print(f\"After POP:\\n   queue_linked_list = {queue_linked_list}\")\n",
     "\n",
     "def main():\n",
     "    sample_nums = generate_numbers(5)\n",
