refactor: add more numbers in the list and add also logic to measure queue

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3202,7 +3202,7 @@
     "    # print(f\"After POP:\\n   queue_linked_list = {queue_linked_list}\")\n",
     "\n",
     "def main():\n",
-    "    sample_nums = generate_numbers(5)\n",
+    "    sample_nums = generate_numbers(20)\n",
     "    print(\"Starting to measure the stack datastructure for both List and LinkedList\")\n",
     "    measure_stack_push_pop_linked_list(sample_nums)\n",
     "\n",
@@ -3213,6 +3213,15 @@
     "    \n",
     "    print(\"End of the stack datastructure\", end=\"\\n\\n\")\n",
     "\n",
+    "    print(\"Starting to measure the queue datastructure for both List and LinkedList\")\n",
+    "    measure_queue_enqueue_dequeue_linked_list(sample_nums)\n",
+    "\n",
+    "    time.sleep(5)\n",
+    "    print(\"program will continue after 5 seconds\")\n",
+    "\n",
+    "    measure_queue_enqueue_dequeue_python_list(sample_nums)\n",
+    "    \n",
+    "    print(\"End of the queue datastructure\", end=\"\\n\\n\")\n",
     "main()"
    ]
   },
