feat: add the class for the node structure of the doubly linked_list
add the structure model of the doubly node with getter and setter
add the class for the doubly linked list

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3239,7 +3239,39 @@
     "    as well as a reference to the preceding node (commonly called back). \n",
     "    The head reference also contains two references, one to the first node in the linked list \n",
     "    and one to the last. Code this implementation in Python.\n",
-    "\"\"\"\n"
+    "\"\"\"\n",
+    "\n",
+    "class doubly_node:\n",
+    "    def __init__(self, data):\n",
+    "        self.data = data\n",
+    "        self.next = None\n",
+    "        self.previous = None\n",
+    "    \n",
+    "    def getData(self):\n",
+    "        return self.data\n",
+    "    \n",
+    "    def getNext(self):\n",
+    "        return self.next\n",
+    "\n",
+    "    def getPrevious(self):\n",
+    "        return self.previous\n",
+    "    \n",
+    "    def setData(self, data):\n",
+    "        self.data = data\n",
+    "\n",
+    "    def setNext(self, nextd):\n",
+    "        self.next = nextd \n",
+    "    \n",
+    "    def setPrevious(self, previousd):\n",
+    "        self.previous = previousd\n",
+    "\n",
+    "class doubly_linked_list:\n",
+    "    def __init__(self):\n",
+    "        self.head = None\n",
+    "        self.previous = None\n",
+    "        self.number_of_elts = 0\n",
+    "    \n",
+    "    "
    ]
   },
   {
