refactor: rename the attributes to reflect doubly linked list attributes

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3268,7 +3268,7 @@
     "class doubly_linked_list:\n",
     "    def __init__(self):\n",
     "        self.head = None\n",
-    "        self.previous = None\n",
+    "        self.tail = None\n",
     "        self.number_of_elts = 0\n",
     "    \n",
     "    "
