feat: add implementation of the two methods for inserting at
add insert an element at the beginning for linked list or at the end

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3270,6 +3270,31 @@
     "        self.head = None\n",
     "        self.tail = None\n",
     "        self.number_of_elts = 0\n",
+    "    # add a node at the beginning of the doubly linked list\n",
+    "    def insert_at_beginning(self, item):\n",
+    "        temp = doubly_node(item) \n",
+    "        current = self.head\n",
+    "        temp.setNext(self.head)\n",
+    "        if self.head == None and self.tail == None:\n",
+    "            temp.setPrevious(self.tail)\n",
+    "            self.tail = temp\n",
+    "        current = temp\n",
+    "        self.head = current\n",
+    "\n",
+    "    # add a node at the end of the doubly linked list\n",
+    "    def insert_at_end(self, item):\n",
+    "        temp = doubly_node(item) \n",
+    "        current_last = self.tail\n",
+    "        temp.setPrevious(self.tail)\n",
+    "        if self.head == None and self.tail == None:\n",
+    "            temp.setNext(self.head)\n",
+    "            self.head = temp\n",
+    "            self.tail = temp\n",
+    "        else:\n",
+    "            current_last.setNext(temp)\n",
+    "            current_last = temp\n",
+    "            self.tail = current_last\n",
+    "        \n",
     "    \n",
     "    "
    ]
