feat: add __str__ method for the doubly linked list

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3297,6 +3297,18 @@
     "        \n",
     "    \n",
     "    "
+    "    def __str__(self):\n",
+    "        items = \"[\"\n",
+    "        separator = \", \"\n",
+    "        current = self.head\n",
+    "        while None != current:\n",
+    "            item = current.getData()\n",
+    "            items += f\"{item}\"\n",
+    "            if None != current.getNext():\n",
+    "                items += \", \" \n",
+    "            current = current.getNext()\n",
+    "        items += \"]\"\n",
+    "        return items\n",
    ]
   },
   {
