chore: add data to test the doubly linked list

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3296,7 +3296,6 @@
     "            self.tail = current_last\n",
     "        \n",
     "    \n",
-    "    "
     "    def __str__(self):\n",
     "        items = \"[\"\n",
     "        separator = \", \"\n",
@@ -3309,6 +3308,21 @@
     "            current = current.getNext()\n",
     "        items += \"]\"\n",
     "        return items\n",
+    "\n",
+    "data = doubly_linked_list()\n",
+    "\n",
+    "data.insert_at_beginning(1)\n",
+    "data.insert_at_beginning(2)\n",
+    "data.insert_at_beginning(3)\n",
+    "data.insert_at_beginning(4)\n",
+    "print(data)\n",
+    "print(\"=> Insert at the end\")\n",
+    "data.insert_at_end(5)\n",
+    "data.insert_at_end(6)\n",
+    "data.insert_at_end(7)\n",
+    "data.insert_at_end(8)\n",
+    "\n",
+    "print(data)"
    ]
   },
   {
