--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3230,6 +3230,17 @@
    "id": "37473aca",
    "metadata": {},
    "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[4, 3, 2, 1]\n",
+      "=> Insert at the end\n",
+      "[4, 3, 2, 1, 5, 6, 7, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "27. The linked list implementation given above is called a singly linked list \n",
@@ -3295,6 +3306,7 @@
     "            current_last = temp\n",
     "            self.tail = current_last\n",
     "        \n",
+    "\n",
     "    \n",
     "    def __str__(self):\n",
     "        items = \"[\"\n",
