refactor: add accumulator for the doubly linked list

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3291,6 +3291,7 @@
     "            self.tail = temp\n",
     "        current = temp\n",
     "        self.head = current\n",
+    "        self.number_of_elts += 1\n",
     "\n",
     "    # add a node at the end of the doubly linked list\n",
     "    def insert_at_end(self, item):\n",
@@ -3305,6 +3306,7 @@
     "            current_last.setNext(temp)\n",
     "            current_last = temp\n",
     "            self.tail = current_last\n",
+    "        self.number_of_elts += 1\n",
     "        \n",
     "\n",
     "    \n",
