feat: add method to insert an item at a given position

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3309,6 +3309,25 @@
     "        self.number_of_elts += 1\n",
     "        \n",
     "\n",
+    "    # add a node at a given position in the doubly linked list\n",
+    "    def insert_at_pos(self, pos, item):\n",
+    "        found = False\n",
+    "        counter = 1\n",
+    "        current = self.head\n",
+    "\n",
+    "        while current != None and not found:\n",
+    "           if counter == pos:\n",
+    "               found = True\n",
+    "           else:\n",
+    "            current = current.getNext() \n",
+    "            counter += 1\n",
+    "        if current != None:\n",
+    "            temp = doubly_node(item)\n",
+    "            temp.setNext(current.getNext())\n",
+    "            temp.setPrevious(current)\n",
+    "            current.setNext(temp)\n",
+    "            temp.getNext().setPrevious(temp)\n",
+    "            self.number_of_elts += 1\n",
     "    \n",
     "    def __str__(self):\n",
     "        items = \"[\"\n",
