chore: add methods to implement

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3328,6 +3328,25 @@
     "            current.setNext(temp)\n",
     "            temp.getNext().setPrevious(temp)\n",
     "            self.number_of_elts += 1\n",
+    "    # update an item at position k\n",
+    "    def update_at_pos(self, pos, new_item):\n",
+    "        pass\n",
+    "\n",
+    "    # update current item with the new item\n",
+    "    def update_current_new_item(self, cur_item, new_item):\n",
+    "        pass\n",
+    "\n",
+    "    # remove a given item\n",
+    "    def remove_item(self, item):\n",
+    "        pass\n",
+    "\n",
+    "    # remove item at the end\n",
+    "    def remove_at_end(self):\n",
+    "        pass\n",
+    "\n",
+    "    # remove item at the pos\n",
+    "    def remove_at_pos(self):\n",
+    "        pass\n",
     "    \n",
     "    def __str__(self):\n",
     "        items = \"[\"\n",
