refactor: add the display of important information

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3368,13 +3368,18 @@
     "data.insert_at_beginning(3)\n",
     "data.insert_at_beginning(4)\n",
     "print(data)\n",
+    "print(f\"numbers of elements = {data.number_of_elts}\")\n",
     "print(\"=> Insert at the end\")\n",
     "data.insert_at_end(5)\n",
     "data.insert_at_end(6)\n",
     "data.insert_at_end(7)\n",
     "data.insert_at_end(8)\n",
+    "print(data)\n",
+    "print(f\"numbers of elements = {data.number_of_elts}\")\n",
     "\n",
     "print(data)"
+    "print(data)\n",
+    "print(f\"numbers of elements = {data.number_of_elts}\")"
    ]
   },
   {
