test: add functional test for the insert_at_pos method

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3377,7 +3377,8 @@
     "print(data)\n",
     "print(f\"numbers of elements = {data.number_of_elts}\")\n",
     "\n",
-    "print(data)"
+    "data.insert_at_pos(2, 9)\n",
+    "data.insert_at_pos(4, 10)\n",
     "print(data)\n",
     "print(f\"numbers of elements = {data.number_of_elts}\")"
    ]
