chore: add display to describe the test

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3376,6 +3376,7 @@
     "data.insert_at_end(8)\n",
     "print(data)\n",
     "print(f\"numbers of elements = {data.number_of_elts}\")\n",
+    "print(\"=> Insert at the position k\")\n",
     "\n",
     "data.insert_at_pos(2, 9)\n",
     "data.insert_at_pos(4, 10)\n",
