chore: add the new output after implementation of the insert position

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3229,15 +3229,19 @@
    "execution_count": null,
    "id": "37473aca",
    "metadata": {},
-   "outputs": [],
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[4, 3, 2, 1]\n",
+      "numbers of elements = 4\n",
       "=> Insert at the end\n",
-      "[4, 3, 2, 1, 5, 6, 7, 8]\n"
+      "[4, 3, 2, 1, 5, 6, 7, 8]\n",
+      "numbers of elements = 8\n",
+      "=> Insert at the position k\n",
+      "[4, 3, 9, 2, 10, 1, 5, 6, 7, 8]\n",
+      "numbers of elements = 10\n"
      ]
     }
    ],
