feat: implement the method update_at_pos
allow to update the item at a given  position

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3332,9 +3332,18 @@
     "            current.setNext(temp)\n",
     "            temp.getNext().setPrevious(temp)\n",
     "            self.number_of_elts += 1\n",
+    "\n",
     "    # update an item at position k\n",
     "    def update_at_pos(self, pos, new_item):\n",
-    "        pass\n",
+    "        counter = 0\n",
+    "        current = self.head\n",
+    "        found = False\n",
+    "        while current != None and not found:\n",
+    "            if counter == pos:\n",
+    "               current.setData(new_item) \n",
+    "               found = True\n",
+    "            counter += 1\n",
+    "            current = current.getNext() \n",
     "\n",
     "    # update current item with the new item\n",
     "    def update_current_new_item(self, cur_item, new_item):\n",
