feat: implement the method update_current_new_item

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3347,7 +3347,13 @@
     "\n",
     "    # update current item with the new item\n",
     "    def update_current_new_item(self, cur_item, new_item):\n",
-    "        pass\n",
+    "        current = self.head\n",
+    "        found = False\n",
+    "        while current != None and not found:\n",
+    "            if current.getData() == cur_item:\n",
+    "                found = True\n",
+    "                current.setData(new_item)\n",
+    "            current = current.getNext()\n",
     "\n",
     "    # remove a given item\n",
     "    def remove_item(self, item):\n",
