chore: add testing case for the two new methods

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3400,6 +3400,15 @@
     "data.insert_at_pos(2, 9)\n",
     "data.insert_at_pos(4, 10)\n",
     "print(data)\n",
+    "print(f\"numbers of elements = {data.number_of_elts}\")\n",
+    "\n",
+    "data.update_at_pos(3, 11)\n",
+    "print(data)\n",
+    "print(f\"numbers of elements = {data.number_of_elts}\")\n",
+    "\n",
+    "data.update_current_new_item(1, 21)\n",
+    "data.update_current_new_item(8, 33)\n",
+    "print(data)\n",
     "print(f\"numbers of elements = {data.number_of_elts}\")"
    ]
   },
