chore: output the result of the test

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3241,6 +3241,10 @@
       "numbers of elements = 8\n",
       "=> Insert at the position k\n",
       "[4, 3, 9, 2, 10, 1, 5, 6, 7, 8]\n",
+      "numbers of elements = 10\n",
+      "[4, 3, 9, 11, 10, 1, 5, 6, 7, 8]\n",
+      "numbers of elements = 10\n",
+      "[4, 3, 9, 11, 10, 21, 5, 6, 7, 33]\n",
       "numbers of elements = 10\n"
      ]
     }
