feat: implement the method remove_item
Remove a found item in the doubly linked list

--- a/pythonds-4-PE.ipynb
+++ b/pythonds-4-PE.ipynb
@@ -3361,7 +3361,24 @@
     "\n",
     "    # remove a given item\n",
     "    def remove_item(self, item):\n",
-    "        pass\n",
+    "        current = self.head\n",
+    "        found = False\n",
+    "        while current != None and not found:\n",
+    "            if current.getData() == item:\n",
+    "                found = True\n",
+    "                self.number_of_elts -= 1\n",
+    "                if current.getPrevious() == None:                    \n",
+    "                    current = current.getNext()\n",
+    "                    current.setPrevious(None)\n",
+    "                    self.head = current\n",
+    "                elif current.getNext() == None:\n",
+    "                    current.getPrevious().setNext(None)\n",
+    "                    self.tail = current.getPrevious()\n",
+    "                else:\n",
+    "                    current.getPrevious().setNext(current.getNext()) \n",
+    "                    current.getNext().setPrevious(current.getPrevious())\n",
+    "            current = current.getNext()\n",
+    "                \n",
     "\n",
     "    # remove item at the end\n",
     "    def remove_at_end(self):\n",
